--- a/locales/br.json
+++ b/locales/br.json
@@ -118,10 +118,10 @@
     "UPDATE DISTANCE": "ATUALIZAR DISTÂNCIA",
     "INVASIONS":"INVASÕES",
     "ALL Invasions Cleaning":"Remover notificações expiradas de TODAS as Invasões",
-    "POKÉMONS TRACKED": "POKÉMON RASTREADOS",
+    "POKÉMON TRACKED": "POKÉMON RASTREADOS",
     "Use Areas":"Utilizar área",
     "Set Distance":"Config Distância",
-    "POKÉMONS":"POKÉMON",
+    "POKÉMON":"POKÉMON",
     "LOCATION":"LOCALIZAÇÃO",
     "NEW INVASIONS ALARM":"NOVO ALARME DE INVASÃO"
 }
