--- a/locales/da.json
+++ b/locales/da.json
@@ -20,8 +20,8 @@
 	"LEVEL": "NIVEAU",
 	"meters": "meter",
 	"Please set it in discord using": "Opsæt det i discord med",
-	"POKÉMONS": "POKÉMON",
-	"POKÉMONS TRACKED": "SPOREDE POKÉMON",
+	"POKÉMON": "POKÉMON",
+	"POKÉMON TRACKED": "SPOREDE POKÉMON",
 	"EGGS & RAIDS TRACKED": "SPOREDE ÆG & RAIDS",
 	"QUESTS TRACKED": "SPOREDE MISSIONER",
 	"QUESTS": "QUESTS",
@@ -72,10 +72,10 @@
 	"Clean": "Rydde",
 	"Yes": "Ja",
 	"No": "Nej",
-	"Apply to all Pokémons": "Anvend på alle Pokémons",
+	"Apply to all Pokémon": "Anvend på alle Pokémon",
 	"NEW MONSTER ALARM": "NY MONSTERALARM",
 	"Type": "Skriv",
-	"to display all Pokémons": "for at vise alle Pokémons",
+	"to display all Pokémon": "for at vise alle Pokémon",
 	"Search": "Sæg",
 	"Cancel": "Annullere",
 	"Submit": "Gem",
@@ -85,8 +85,8 @@
 	"Select Pokémon Quests you want to add": "Vælg hvilke Pokémon Missioner du vil tilføje",
 	"Select the Raid Bosses you want to add": "Vælg hvilke Raids du vil tilføje",
 	"NEW QUEST ALARM": "NY MISSIONS ALARM",
-	"Select Pokémon Quests you want to add (Pokémons Currently available on Map)": "Vælg hvilke Pokémon Missioner du vil tilføje (Pokémons som som findes på kortet lige nu)",
-	"Pokemons Currently available on Map": "Pokémons som som findes på kortet lige nu",
+	"Select Pokémon Quests you want to add (Pokémon Currently available on Map)": "Vælg hvilke Pokémon Missioner du vil tilføje (Pokémon som som findes på kortet lige nu)",
+	"Pokemons Currently available on Map": "Pokémon som som findes på kortet lige nu",
 	"Or use search below to add another pokemon": "Eller brug søgningen herunder for at tilføje en anden Pokémon",
 	"Select Quests Items you want to add": "Vælg hvilke Missions belønninger du til tilføje",
 	"Level": "Niveau",
@@ -145,19 +145,19 @@
 	"The request to get user location timed out": "Anmodning om at bruger placering timede ud",
 	"An unknown error occurred": "Der er opstået en ukendt fejl",
 	"Geolocation is not supported by this browser": "Geo-location er ikke understøttet af denne browser",
-	"Update Distance for all tracked Pokémons?": "Opdatere afstand for alle sporede Pokémons?",
-	"This will update Distance settings for ALL tracked Pokémons": "Dette vil opdatere afstands indstilling for alle sporede Pokémons",
+	"Update Distance for all tracked Pokémon?": "Opdatere afstand for alle sporede Pokémon?",
+	"This will update Distance settings for ALL tracked Pokémon": "Dette vil opdatere afstands indstilling for alle sporede Pokémon",
 	"Please Set New Distance": "Venligst indstil en ny afstand",
 	"Update Distance for all tracked Raids & Eggs?": "Skal afstanden opdateres for alle sporede Raids og Æg?",
 	"This will update Distance settings for ALL tracked Raids & Eggs": "Dette vil opdatere afstands instillingen for ALLE sporede Raids og Æg",
 	"Update Distance for all tracked Quests?": "Skal afstanden opdateres for alle sporede Missioner?",
 	"This will update Distance settings for ALL tracked Quests": "Dette vil opdatere afstands instillinger for ALLE sporede Missioner",
-	"Successfully Updated Distance on ALL Pokémons": "Afstand er opdateret for ALLE Pokémons",
+	"Successfully Updated Distance on ALL Pokémon": "Afstand er opdateret for ALLE Pokémon",
 	"Successfully Updated Distance on ALL Raids & Eggs": "Afstand er opdateret for ALLE  Raids & Æg",
 	"Successfully Updated Distance on ALL Quests": "Afstand er opdateret for ALLE Missioner",
 	"UPDATE": "OPDATERE",
 	"UPDATE DISTANCE": "OPDATERE AFSTAND",
-	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har ikke sat nogle alarmer for ALLE Pokémons. Vælk venligst en Generation!",
+	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har ikke sat nogle alarmer for ALLE Pokémon. Vælk venligst en Generation!",
 	"You have not set any Alarms for this Generation!": "Du har ikke at nogle alarmer for denne generation!",
 	"User & Channel Management":"Bruger og kanal håndtering",
 	"Back to own Account":"Tilbage til egen konto",
