--- a/locales/de.json
+++ b/locales/de.json
@@ -20,8 +20,8 @@
    "LEVEL":"LEVEL",
    "meters":"Meter",
    "Please set it in discord using":"Bitte setze es in Discord mit dem entsprechenden",
-   "POKÉMONS":"POKÉMON",
-   "POKÉMONS TRACKED":"POKÉMON-EINSTELLUNGEN",
+   "POKÉMON":"POKÉMON",
+   "POKÉMON TRACKED":"POKÉMON-EINSTELLUNGEN",
    "EGGS & RAIDS TRACKED":"RAID-EINSTELLUNGEN",
    "QUESTS TRACKED":"QUEST-EINSTELLUNGEN",
    "QUESTS":"QUESTS",
@@ -72,10 +72,10 @@
    "Clean":"Bereinigen",
    "Yes":"Ja",
    "No":"Nein",
-   "Apply to all Pokémons":"Auf alle Pokémon anwenden",
+   "Apply to all Pokémon":"Auf alle Pokémon anwenden",
    "NEW MONSTER ALARM":"NEUE POKÉMON-EINSTELLUNG",
    "Type":"Schreibe",
-   "to display all Pokémons":"um alle Pokémon anzuzeigen",
+   "to display all Pokémon":"um alle Pokémon anzuzeigen",
    "Search":"Suche",
    "Cancel":"Abbrechen",
    "Submit":"Speichern",
@@ -145,14 +145,14 @@
    "The request to get user location timed out":"Die Standortanfrage ist abgelaufen",
    "An unknown error occurred":"Ein unbekannter Fehler ist aufgetreten",
    "Geolocation is not supported by this browser":"Standortbestimmung wird vom Browser nicht unterstützt",
-   "Update Distance for all tracked Pokémons?":"Möchtest du die Distanz für alle getrackten Pokémon aktualisieren?",
-   "This will update Distance settings for ALL tracked Pokémons":"Dadurch werden alle Distanzeinstellungen für ALLE Pokémon aktualisiert.",
+   "Update Distance for all tracked Pokémon?":"Möchtest du die Distanz für alle getrackten Pokémon aktualisieren?",
+   "This will update Distance settings for ALL tracked Pokémon":"Dadurch werden alle Distanzeinstellungen für ALLE Pokémon aktualisiert.",
    "Please Set New Distance":"Bitte setzten deinen neuen Standort",
    "Update Distance for all tracked Raids & Eggs?":"Möchtest du die Distanz für alle getrackten Raids & Eier aktualisieren?",
    "This will update Distance settings for ALL tracked Raids & Eggs":"Dadurch wird die Distanz für ALLE getrackten Raids & Eier aktualisiert",
    "Update Distance for all tracked Quests?":"Möchstest du die Distanz für alle getrackten Quests aktualisieren?",
    "This will update Distance settings for ALL tracked Quests":"Dadurch wird die Distanz für ALLE getrackten Quests aktualisiert",
-   "Successfully Updated Distance on ALL Pokémons":"Distanzeinstellungen für alle Pokémon gespeichert",
+   "Successfully Updated Distance on ALL Pokémon":"Distanzeinstellungen für alle Pokémon gespeichert",
    "Successfully Updated Distance on ALL Raids & Eggs":"Distanzeinstellungen für alle Raids & Eier gespeichert",
    "Successfully Updated Distance on ALL Quests":"Distanzeinstellungen für alle Quests gespeichert",
    "UPDATE":"AKTUALISIEREN",
