--- a/locales/es.json
+++ b/locales/es.json
@@ -4,7 +4,7 @@
 	"QUESTS":"MISIONES",
 	"INVASIONS":"INVASIONES",
 	"LOCATION":"UBICACIÓN",
-	"POKÉMONS TRACKED":"POKÉMONS EN SEGUIMIENTO",
+	"POKÉMON TRACKED":"POKÉMON EN SEGUIMIENTO",
 	"ADD":"AÑADIR",
 	"DELETE ALL":"BORRAR TODO",
 	"UPDATE DISTANCE":"ACTUALIZAR GPS",
@@ -38,14 +38,14 @@
 	"PvP Great":"PvP Súper (Solo uno u otro, son exclusivos, no uséis los dos en el mismo filtro)",
 	"Gender":"Género",
 	"All":"Todos",
-	"to display all Pokémons": "para mostrar todos los pokémon",
+	"to display all Pokémon": "para mostrar todos los pokémon",
 	"Type": "Escribe",
 	"Male":"Macho",
 	"Female":"Hembra",
 	"Clean":"Auto-limpieza",
 	"Yes":"Sí",
-	"Apply to all Pokémons":"APLICAR A TODOS LOS POKÉMON",
-	"Type ALL to display all Pokémons":"Escribe ALL para mostrar todos los pokémon",
+	"Apply to all Pokémon":"APLICAR A TODOS LOS POKÉMON",
+	"Type ALL to display all Pokémon":"Escribe ALL para mostrar todos los pokémon",
 	"Search":"Búsqueda",
 	"Submit":"Enviar",
 	"Cancel":"Cancelar",
@@ -95,11 +95,11 @@
 	"Settings updated successfully":"Ajustes actualizados",
 	"QUESTS TRACKED":"MISIONES EN SEGUIMIENTO",
 	"INVASIONS TRACKED":"INVASIONES EN SEGUIMIENTO",
-	"Update Distance for all tracked Pokémons?":"¿Cambiar la distancia de todos los pokémon?",
+	"Update Distance for all tracked Pokémon?":"¿Cambiar la distancia de todos los pokémon?",
 	"Update Distance for all tracked Raids & Eggs?":"¿Cambiar la distancia de todas las incursiones?",
 	"Update Distance for all tracked Quests?":"¿Cambiar la distancia de todas las misiones?",
 	"Update Distance for all tracked Invasions?":"¿Cambiar la distancia de todas las invasiones?",
-	"This will update Distance settings for ALL tracked Pokémons":"Esto actualizará la distancia de TODOS los pokémon",
+	"This will update Distance settings for ALL tracked Pokémon":"Esto actualizará la distancia de TODOS los pokémon",
 	"This will update Distance settings for ALL tracked Raids & Eggs":"Esto actualizará la distancia de TODAS las incursiones",
 	"This will update Distance settings for ALL tracked Quests":"Esto actualizará la distancia de TODAS las misiones",
 	"This will update Distance settings for ALL tracked Invasions":"Esto actualizará la distancia de TODAS las invasiones",
