--- a/locales/fr.json
+++ b/locales/fr.json
@@ -20,8 +20,8 @@
     "LEVEL":"LEVEL",
     "meters":"mètres",
     "Please set it in discord using":"Merci de la configurer sur discord avec",
-    "POKÉMONS":"POKÉMONS",
-    "POKÉMONS TRACKED":"POKÉMONS SUIVIS",
+    "POKÉMON":"POKÉMON",
+    "POKÉMON TRACKED":"POKÉMON SUIVIS",
     "EGGS & RAIDS TRACKED":"OEUFS & RAIDS SUIVIS",
     "QUESTS TRACKED":"QUETES SUIVIES",
     "QUESTS":"QUÊTES",
@@ -40,14 +40,14 @@
     "Successfully Deleted Raid Alarm(s)":"Alarme(s) de Raid(s) supprimée(s) avec succès",
     "Successfully Updated Egg Alarm":"Alarme(s) d'oeuf(s) supprimée(s) avec succès",
     "Successfully Updated List of Areas":"La liste de Zones à été mise à jour",
-    "Successfully Updated Monster Alarm":"La liste de Pokémons  à été mise à jour",
+    "Successfully Updated Monster Alarm":"La liste de Pokémon  à été mise à jour",
     "Successfully Updated Quest Alarm":"La liste de Quêtes  à été mise à jour",
     "Successfully Updated Raid Alarm":"La liste de Raids  à été mise à jour",
-    "Delete ALL tracked Mons?":"Supprimer tous les Pokémons suivis",
+    "Delete ALL tracked Mons?":"Supprimer tous les Pokémon suivis",
     "Delete ALL Raid/Eggs?":"Supprimer tous les Oeufs/Raids suivis",
     "Delete ALL Quests?":"Supprimer toutes les quêtes suivies",
     "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Cette action va supprimer toutes vos alarmes Oeufs et Raids et ne peut pas être annulée, êtes-vous sûr ?",
-    "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Cette action va supprimer toutes vos alarmes Pokémons et ne peut pas être annulée, êtes-vous sûr ?",
+    "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Cette action va supprimer toutes vos alarmes Pokémon et ne peut pas être annulée, êtes-vous sûr ?",
     "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Cette action va supprimer toutes vos alarmes de Quêtes et ne peut pas être annulée, êtes-vous sûr ?",
     "ULTRA":"ULTRA",
     "WEIGHT":"POIDS",
@@ -72,21 +72,21 @@
     "Clean":"Nettoyage",
     "Yes":"Oui",
     "No":"Non",
-    "Apply to all Pokémons":"Appliquer à tous les Pokémons",
+    "Apply to all Pokémon":"Appliquer à tous les Pokémon",
     "NEW MONSTER ALARM":"NOUVELLE ALARME POKÉMON",
     "Type":"Taper",
-    "to display all Pokémons":"pour afficher tous les Pokémons",
+    "to display all Pokémon":"pour afficher tous les Pokémon",
     "Search":"Rechercher",
     "Cancel":"Annuler",
     "Submit":"Soumettre",
     "NEW RAID ALARM":"NOUVELLE ALARME RAID",
     "Select Egg Levels you want to add":"Sélectionnez les Niveaux d'oeufs à ajouter",
     "Select Raid Levels you want to add":"Sélectionnez les Niveaux de Raids à ajouter",
-    "Select Pokémon Quests you want to add":"Sélectionner les Pokémons de quêtes à ajouter",
+    "Select Pokémon Quests you want to add":"Sélectionner les Pokémon de quêtes à ajouter",
     "Select the Raid Bosses you want to add":"Sélectionnez les Boss de Raids à ajouter",
     "NEW QUEST ALARM":"NOUVELLE ALARME DE QUÊTE",
     "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Sélectionnez les niveaux de qûetes que vous voulez ajouter",
-    "Pokemons Currently available on Map":"Pokémons actuellement sur la carte",
+    "Pokemons Currently available on Map":"Pokémon actuellement sur la carte",
     "Or use search below to add another pokemon":"Ou utilisez la recherche pour ajouter un autre Pokémon",
     "Select Quests Items you want to add":"Sélectionnez les objects de quête à ajouter",
     "Level": "Niveau",
@@ -101,7 +101,7 @@
     "Renew":"Renouveler",
     "Subscription valid until":"Abonnement Valide jusqu'au",
     "Alerts":"Alarmes",
-    "ALL Monsters Cleaning":"Nettoyer TOUS les Pokémons",
+    "ALL Monsters Cleaning":"Nettoyer TOUS les Pokémon",
     "ALL Raid/Egg Cleaning":"Nettoyer TOUS les Raids/Oeufs",
     "ALL Quests Cleaning":"Nettoyer TOUTES les Quêtes",
     "Your Location is not set and cannot be set here!":"Votre Position n'est pas configurée et ne peut pas l'être ici!",
@@ -143,19 +143,19 @@
     "The request to get user location timed out":"La demande de localisation a expiré",
     "An unknown error occurred":"Une erreur inconnue s'est produite",
     "Geolocation is not supported by this browser":"La géolocalisation n'est pas supportée par ce navigateur",
-    "Update Distance for all tracked Pokémons?":"Modifier la Distance pour tous les Pokémons suivis?",
-    "This will update Distance settings for ALL tracked Pokémons":"Cette action modifiera la distance de suivi pour TOUS les Pokémons",
+    "Update Distance for all tracked Pokémon?":"Modifier la Distance pour tous les Pokémon suivis?",
+    "This will update Distance settings for ALL tracked Pokémon":"Cette action modifiera la distance de suivi pour TOUS les Pokémon",
     "Please Set New Distance":"Veuillez indiquer la nouvelle distance",
     "Update Distance for all tracked Raids & Eggs?":"Modifier la Distance pour TOUS les Raids et Oeufs suivis?",
     "This will update Distance settings for ALL tracked Raids & Eggs":"Cette action modifiera la distance de suivi pour TOUS les Raids et Oeufs suivis",
     "Update Distance for all tracked Quests?":"Modifier la Distance pour TOUTES les quêtes?",
     "This will update Distance settings for ALL tracked Quests":"Cette action modifiera la distance de suivi pour TOUTES les quêtes suivies",
-    "Successfully Updated Distance on ALL Pokémons":"Distance Mise à Jour avec Succès pour TOUS les Pokémons",
+    "Successfully Updated Distance on ALL Pokémon":"Distance Mise à Jour avec Succès pour TOUS les Pokémon",
     "Successfully Updated Distance on ALL Raids & Eggs":"Distance Mise à Jour avec Succès pour TOUS les Raids et Oeufs",
     "Successfully Updated Distance on ALL Quests":"Distance Mise à Jour avec Succès pour TOUTES les quêtes",
     "UPDATE":"MAJ",
     "UPDATE DISTANCE":"MODIFIER LA DISTANCE",
-    "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Vous n'avez configuré aucune Alarme pour TOUS les Pokémons. Sélectionnez une Génération!",
+    "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Vous n'avez configuré aucune Alarme pour TOUS les Pokémon. Sélectionnez une Génération!",
     "You have not set any Alarm yet!":"Vous n'avez encore configuré aucune Alarme!",
     "You have not set any Alarms for this Generation!":"Vous n'avez configuré aucune Alarme pour cette génération!",
     "User & Channel Management":"Gestion Utilisateurs et Canaux",
@@ -263,7 +263,7 @@
     "Delete ALL tracked Lures?":"Supprimer tous les Leures suivis",
     "This will delete all your Lures Alarms and cannot be undone":"Cette action va supprimer toutes vos alarmes de Leures et ne peut pas être annulée",
     "ACTIVATE CLEANING ON ALL":"ACTIVER LE CLEANING SUR TOUS",
-    "Monsters":"Pokémons",
+    "Monsters":"Pokémon",
     "Raid/Egg":"Raids/Oeufs",
     "Quests":"Quêtes",
     "Invasions":"Invasions",
