--- a/locales/nl.json
+++ b/locales/nl.json
@@ -20,8 +20,8 @@
     "LEVEL":"LEVEL",
     "meters":"meter",
     "Please set it in discord using":"Gelieve dit in te stellen in discord met",
-    "POKÉMONS":"POKÉMON",
-    "POKÉMONS TRACKED":"GEVOLGDE POKEMON",
+    "POKÉMON":"POKÉMON",
+    "POKÉMON TRACKED":"GEVOLGDE POKEMON",
     "EGGS & RAIDS TRACKED":"GEVOLGDE RAIDS & EIEREN",
     "QUESTS TRACKED":"GEVOLGENDE QUESTS",
     "QUESTS":"QUESTS",
@@ -72,10 +72,10 @@
     "Clean":"Opruimen",
     "Yes":"Ja",
     "No":"Nee",
-    "Apply to all Pokémons":"Toepassen op alle Pokémon",
+    "Apply to all Pokémon":"Toepassen op alle Pokémon",
     "NEW MONSTER ALARM":"NIEUW POKEMON ALARM",
     "Type":"Type",
-    "to display all Pokémons":"om alle Pokémon weer te geven",
+    "to display all Pokémon":"om alle Pokémon weer te geven",
     "Search":"Zoeken",
     "Cancel":"Annuleren",
     "Submit":"Indienen",
@@ -143,14 +143,14 @@
     "The request to get user location timed out":"Het verzoek voor gebruikers locatie duurde te lang",
     "An unknown error occurred":"Een onbekende fout is opgetreden",
     "Geolocation is not supported by this browser":"Geolocatie word niet ondersteund in deze browser",
-    "Update Distance for all tracked Pokémons?":"Bijwerken afstand instelling voor alle Pokémons?",
-    "This will update Distance settings for ALL tracked Pokémons":"Hiermee pas je de afstand aan van alle Pokémons die je volgt",
+    "Update Distance for all tracked Pokémon?":"Bijwerken afstand instelling voor alle Pokémon?",
+    "This will update Distance settings for ALL tracked Pokémon":"Hiermee pas je de afstand aan van alle Pokémon die je volgt",
     "Please Set New Distance":"Stel je nieuwe afstand in",
     "Update Distance for all tracked Raids & Eggs?":"Bijwerken afstand instelling voor alle raids en eieren?",
     "This will update Distance settings for ALL tracked Raids & Eggs":"Bijwerken afstand instelling voor alle raids en eieren",
     "Update Distance for all tracked Quests?":"Bijwerken afstand instelling voor alle quests?",
     "This will update Distance settings for ALL tracked Quests":"Bijwerken afstand instelling voor alle quests",
-    "Successfully Updated Distance on ALL Pokémons":"Afstand alle Pokémon succesvol bijgewerkt",
+    "Successfully Updated Distance on ALL Pokémon":"Afstand alle Pokémon succesvol bijgewerkt",
     "Successfully Updated Distance on ALL Raids & Eggs":"Afstand alle raids en eieren succesvol bijgewerkt",
     "Successfully Updated Distance on ALL Quests":"Afstand alle quests succesvol bijgewerkt",
     "UPDATE":"BIJWERKEN",
