--- a/locales/pl.json
+++ b/locales/pl.json
@@ -20,8 +20,8 @@
     "LEVEL":"LEVEL",
     "meters":"metrów",
     "Please set it in discord using":"Opcjonalnie możesz ustawić lokalizację na discordzie używając komendy",
-    "POKÉMONS":"POKEMONY",
-    "POKÉMONS TRACKED":"ŚLEDZONE POKEMONY",
+    "POKÉMON":"POKEMONY",
+    "POKÉMON TRACKED":"ŚLEDZONE POKEMONY",
     "EGGS & RAIDS TRACKED":"ŚLEDZONE RAIDY",
     "QUESTS TRACKED":"ŚLEDZONE QUESTY",
     "QUESTS":"QUESTY",
@@ -72,10 +72,10 @@
     "Clean":"Czyszczenie",
     "Yes":"Tak",
     "No":"Nie",
-    "Apply to all Pokémons":"Zastosuj do wszystkich Pokemonów",
+    "Apply to all Pokémon":"Zastosuj do wszystkich Pokemonów",
     "NEW MONSTER ALARM":"POWIADOMIENIE DLA NOWEGO POKEMONA",
     "Type":"Wpisz",
-    "to display all Pokémons":", aby wyświetlić wszystkie Pokemony",
+    "to display all Pokémon":", aby wyświetlić wszystkie Pokemony",
     "Search":"Szukaj",
     "Cancel":"Anuluj",
     "Submit":"Zapisz",
@@ -135,12 +135,12 @@
     "The request to get user location timed out":"Prakroczono czas uzyskiwania lokalizacji",
     "An unknown error occurred":"Wystąpił nieznany błąd",
     "Geolocation is not supported by this browser":"Ta przeglądarka nie jest w stanie wykryć lokalizacji",
-    "Successfully Updated Distance on ALL Pokémons":"Zaktualizowano odległość we wszystkich Pokemonach",
+    "Successfully Updated Distance on ALL Pokémon":"Zaktualizowano odległość we wszystkich Pokemonach",
     "Successfully Updated Distance on ALL Raids & Eggs":"Zaktualizowano odległość we wszystkich Raidach",
     "Successfully Updated Distance on ALL Quests":"Zaktualizowano odległość we wszystkich Questach",
     "UPDATE DISTANCE":"ZAKTUALIZUJ ODLEGŁOŚĆ",
-    "Update Distance for all tracked Pokémons?":"Zaktualizować odległość dla wszystkich śledzonych Pokemonów?",
-    "This will update Distance settings for ALL tracked Pokémons":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Pokemonów",
+    "Update Distance for all tracked Pokémon?":"Zaktualizować odległość dla wszystkich śledzonych Pokemonów?",
+    "This will update Distance settings for ALL tracked Pokémon":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Pokemonów",
     "Please Set New Distance":"Nowa odległość",
     "Update Distance for all tracked Quests?":"Zaktualizować odległość dla wszystkich śledzonych Questów?",
     "This will update Distance settings for ALL tracked Quests":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Questów",
