--- a/locales/pt.json
+++ b/locales/pt.json
@@ -20,8 +20,8 @@
     "LEVEL":"NIVEL",
     "meters":"metros",
     "Please set it in discord using":"Por favor configure no Dicord com",
-    "POKÉMONS":"POKÉMONS",
-    "POKÉMONS TRACKED":"POKÉMONS SEGUIDOS",
+    "POKÉMON":"POKÉMON",
+    "POKÉMON TRACKED":"POKÉMON SEGUIDOS",
     "EGGS & RAIDS TRACKED":"OVOS & RAIDS SEGUIDOS",
     "QUESTS TRACKED":"QUESTS SEGUIDAS",
     "QUESTS":"QUESTS",
@@ -40,7 +40,7 @@
     "Successfully Deleted Raid Alarm(s)":"Alarme(s) de Raid(s) removido(s) com sucesso",
     "Successfully Updated Egg Alarm":"Alarme(s) de Ovo(s) removido(s) com sucesso",
     "Successfully Updated List of Areas":"Áreas atualizada(s) com sucesso",
-    "Successfully Updated Monster Alarm":"Lista de Pokémons atualizada(s) com sucesso",
+    "Successfully Updated Monster Alarm":"Lista de Pokémon atualizada(s) com sucesso",
     "Successfully Updated Quest Alarm":"Lista de Quests atualizada(s) com sucesso",
     "Successfully Updated Raid Alarm":"Lista de Raidsatualizada(s) com sucesso",
     "Delete ALL tracked Mons?":"REMOVER TODOS os Pokemons seguidos?",
@@ -72,10 +72,10 @@
     "Clean":"Limpo",
     "Yes":"Sim",
     "No":"Não",
-    "Apply to all Pokémons":"Aplicar a TODOS os Pokémons",
+    "Apply to all Pokémon":"Aplicar a TODOS os Pokémon",
     "NEW MONSTER ALARM":"NOVO ALARME DE POKÉMON",
     "Type":"Tipo",
-    "to display all Pokémons":"para mostrar todos os Pokémons",
+    "to display all Pokémon":"para mostrar todos os Pokémon",
     "Search":"Procurar",
     "Cancel":"Cancelar",
     "Submit":"Submeter",
@@ -101,7 +101,7 @@
     "Renew":"Renovar",
     "Subscription valid until":"Subscrição válida até:",
     "Alerts":"Alarmes",
-    "ALL Monsters Cleaning":"Remover notificações expiradas de TODOS os Pokémons",
+    "ALL Monsters Cleaning":"Remover notificações expiradas de TODOS os Pokémon",
     "ALL Raid/Egg Cleaning":"Remover notificações expiradas de TODAS as Raids/Ovos",
     "ALL Quests Cleaning":"Remover notificações expiradas de TODAS as Quests",
     "Your Location is not set and cannot be set here!":"A tua localização não se encontra definida e não pode ser definida aqui!",
