--- a/locales/se.json
+++ b/locales/se.json
@@ -20,8 +20,8 @@
 	"LEVEL": "NIVÅ",
 	"meters": "meter",
 	"Please set it in discord using": "Ställ in det i discord med",
-	"POKÉMONS": "POKÉMON",
-	"POKÉMONS TRACKED": "SPÅRADE POKÉMON",
+	"POKÉMON": "POKÉMON",
+	"POKÉMON TRACKED": "SPÅRADE POKÉMON",
 	"EGGS & RAIDS TRACKED": "SPÅRADE ÄGG & RAIDER",
 	"QUESTS TRACKED": "SPÅRADE QUESTS",
 	"QUESTS": "QUESTS",
@@ -72,10 +72,10 @@
 	"Clean": "Städa",
 	"Yes": "Ja",
 	"No": "Nej",
-	"Apply to all Pokémons": "Använd på alla Pokémons",
+	"Apply to all Pokémon": "Använd på alla Pokémon",
 	"NEW MONSTER ALARM": "NYTT MONSTERALARM",
 	"Type": "Typ",
-	"to display all Pokémons": "för att visa alla Pokémons",
+	"to display all Pokémon": "för att visa alla Pokémon",
 	"Search": "Sök",
 	"Cancel": "Ångra",
 	"Submit": "Skicka",
@@ -85,8 +85,8 @@
 	"Select Pokémon Quests you want to add": "Välj vilka Pokémon Quest du vill lägga till",
 	"Select the Raid Bosses you want to add": "Välj vilka RaidBossar du vill lägga till",
 	"NEW QUEST ALARM": "NYTT QUESTALARM",
-	"Select Pokémon Quests you want to add (Pokémons Currently available on Map)": "Välj vilka Pokémon Quests du vill lägga till (Pokémons som för närvarande finns på kartan)",
-	"Pokemons Currently available on Map": "Pokémons för närvarande på kartan",
+	"Select Pokémon Quests you want to add (Pokémon Currently available on Map)": "Välj vilka Pokémon Quests du vill lägga till (Pokémon som för närvarande finns på kartan)",
+	"Pokemons Currently available on Map": "Pokémon för närvarande på kartan",
 	"Or use search below to add another pokemon": "Eller använd sökningen nedan för att lägga till en annan Pokémon",
 	"Select Quests Items you want to add": "Välj Item belöning som du vill lägga till",
 	"Level": "Nivå",
@@ -145,19 +145,19 @@
 	"The request to get user location timed out": "Begäran om att få användarplats tog för lång tid",
 	"An unknown error occurred": "Ett okänt fel uppstod",
 	"Geolocation is not supported by this browser": "Geolocation stöds inte av denna webbläsare",
-	"Update Distance for all tracked Pokémons?": "Uppdatera avstånd för alla spårade Pokémons?",
-	"This will update Distance settings for ALL tracked Pokémons": "Detta kommer att uppdatera avståndsinställningarna för ALLA spårade Pokémons",
+	"Update Distance for all tracked Pokémon?": "Uppdatera avstånd för alla spårade Pokémon?",
+	"This will update Distance settings for ALL tracked Pokémon": "Detta kommer att uppdatera avståndsinställningarna för ALLA spårade Pokémon",
 	"Please Set New Distance": "Ställ in nytt avstånd",
 	"Update Distance for all tracked Raids & Eggs?": "Uppdatera avstånd för alla spårade raider och ägg?",
 	"This will update Distance settings for ALL tracked Raids & Eggs": "Detta kommer att uppdatera avståndsinställningarna för ALLA spårade raider och ägg",
 	"Update Distance for all tracked Quests?": "Uppdatera distans för alla spårade uppdrag?",
 	"This will update Distance settings for ALL tracked Quests": "Detta kommer att uppdatera avståndsinställningarna för ALLA spårade uppdrag",
-	"Successfully Updated Distance on ALL Pokémons": "Uppdatera avstånd på alla Pokémons",
+	"Successfully Updated Distance on ALL Pokémon": "Uppdatera avstånd på alla Pokémon",
 	"Successfully Updated Distance on ALL Raids & Eggs": "Uppdatera avstånd på ALLA Raids & Eggs",
 	"Successfully Updated Distance on ALL Quests": "Uppdatera avstånd på ALLA uppdrag framgångsrikt",
 	"UPDATE": "UPPDATERA",
 	"UPDATE DISTANCE": "UPPDATERA AVSTÅND",
-	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har inte ställt in något larm för ALLA Pokémons. Välj en Generation!",
+	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har inte ställt in något larm för ALLA Pokémon. Välj en Generation!",
 	"You have not set any Alarms for this Generation!": "Du har inte ställt in några larm för denna generation!",
 	"User & Channel Management":"Användar och kanalhantering",
 	"Back to own Account":"Tillbaka till eget konto",
