Move from poracle_dir to API

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -256,6 +256,7 @@
     "Glacial Lure":"Type Glacial",
     "Mossy Lure":"Type Moussu",
     "Magnetic Lure":"Type Magnetic",
+    "Rainy Lure":"Type Pluvieux",
     "Delete tracking for Lures":"Supprimer le suivi des Leures",
     "This will delete tracking for Lure":"Cette action supprimera le suivi des Leures",
     "Update Distance for all tracked Lures?":"Modifier la Distance pour tous les Leures suivis?",
