Correct Display Pages

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -299,5 +299,7 @@
     "Cleaning":"Nettoyage",
     "Trackings":"Suivis",
     "Profiles":"Profils",
-    "Areas & Location":"Zones et Localisation"
+    "Areas & Location":"Zones et Localisation",
+    "You have configured":"Vous avez configuré",
+    "area(s)":"zone(s)"
 }
