Update all redirect links to wrapper

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -30,7 +30,7 @@
     "Raids Level":"Raids Niveau",
     "Settings updated successfully":"Paramètres mis à jour avec succès",
     "STATS":"STATS",
-    "Successfully Added Monster Alarm":"Alarme Pokémon ajoutée avec succès",
+    "Successfully Added Monster Alarm(s)":"Alarme(s) Pokémon ajoutée avec succès",
     "Successfully Added Quest Alarm(s)":"Alarme(s) de quêtes ajoutée(s) avec succès",
     "Successfully Added Raids Alarm(s)":"Alarme(s) de Raids ajoutée(s) avec succès",
     "Successfully Deleted Egg Alarm":"Alarme d'oeuf supprimée avec succès",
